--- a/assets/styles.css
+++ b/assets/styles.css
@@ -95,6 +95,7 @@ header nav ul li a {
     width: 250px;
     height: 150px;
     border: solid 2px #FFD700;
+    box-shadow: 0 0 10px white;
 }
 
 #first-project-img {
