--- a/assets/styles.css
+++ b/assets/styles.css
@@ -523,7 +523,7 @@ h3.my-profession
     background-color: var(--mp-blue);
 }
 
-.btn-contact {
+#btn-contact {
     background-color: var(--mp-blue);
 }
 
@@ -656,7 +656,7 @@ h3.my-profession
     padding: 0 50px;
 }
 
-.btn-contact-contact
+.btn-contact-contact 
 {
     font-size: 16px;
     padding: 5px 15px;
@@ -681,6 +681,53 @@ h3.my-profession
 }
 
 /* Contact section end */
+
+/* Thank you section start */
+
+.thank-you-body {
+    position: relative;
+}
+
+.thank-you-section {
+    position: absolute;
+    top: 420px;
+    left: 500px;
+}
+
+.thank-you-body h2 {
+    font-size: 50px;
+    color: var(--text-white-50);
+    border-bottom:solid 3px var(--mp-blue);
+}
+
+.thank-you-body button {
+    background-color: var(--mp-blue);
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: var(--text-white-50);
+    font-weight: 600;
+    text-decoration: none;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    border: none;
+    transition: all 0.3s ease;
+    position:absolute;
+    top: 100px;
+    left: 250px;
+    width: 200px;
+}
+
+.thank-you-body button:hover {
+    transform: scale(1.05);
+}
+
+
+/* Thank you section end 
+
+*/
+
 
 @media (max-width:1199px)
 {
