--- a/assets/styles.css
+++ b/assets/styles.css
@@ -884,6 +884,13 @@ h3.my-profession
     .center-thankyou {
         top: 45%;
     }
+    header .nav-toggler {
+        height: 60px;
+        width: 65px;
+    }
+    .section-title-services {
+        margin-top: 20px;
+    }
 }
 @media (max-width:767px)
 {
